--- a/roles/xcode/tasks/main.yml
+++ b/roles/xcode/tasks/main.yml
@@ -1,5 +1,6 @@
+- name: Update MacOS
+  shell: softwareupdate --install --all
+
 - name: Installing xcode-select
   shell: xcode-select --install
-
-# - name: Updating Xcode
-  # shell: softwareupdate -i Xcode11
+  ignore_errors: true
